# Darcy-Construct-Benchmark

./: README.md  Ventilation_EIT_PEEP_Case_Study.md  __init__.py  benchmark_report.txt  config.py  dataset.py  diagnostics.py  forward.py  frozen_protocol.json  kl.py  perturbations.py  protocol.py  pyproject.toml  run_benchmark.py  solver.py  surrogates.py
tests/: test_benchmark.py  test_v02.py  test_v03.py  test_v04.py
